--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_facebook_auth: ^5.0.8
+  image_picker: ^1.0.0
 
 dev_dependencies:
   flutter_test:
@@ -69,6 +70,7 @@ flutter:
      - assets/loading.png
      - assets/go.png
      - assets/done.png
+     - assets/camera.png
     
 
   # An image asset can refer to one or more resolution-specific "variants", see
